tweaking the release pipeline

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,10 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: tar modules
-      run: tar cjpvf modules.tar.bz2 modules
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         REPO_OWNER: jtviegas
+        SOURCE: modules
