tweaking the release pipeline

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,3 +14,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         REPO_OWNER: jtviegas
+        WITH_V: true
+        source: ${{ GITHUB_WORKSPACE }}/modules
