forcing tag bump patch

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,5 +17,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         REPO_OWNER: jtviegas
         WITH_V: false
-        DEFAULT_BUMP: major
+        DEFAULT_BUMP: patch
 
